<resources>
    <string name="app_name">CycleNow</string>
    <string name="button_send">Say something</string>
    <string name="default_message">Click button below!</string>
    <string name="interact_message">You just clicked on the Button!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="str_login_user">user name : </string>
    <string name="str_login_password">password : </string>
    <string name="str_login_register">register</string>
    <string name="str_login_login">login</string>
    <string name="str_login_state_network">net connecting</string>
    <string name="str_login_state_verify">user verifying</string>
    <string name="str_login_state_download">data downloading</string>
    <string name="str_login_state_ok">load success</string>
    <string name="str_login_edittext_null">user name or password can not be empty !</string>
    <string name="str_login_verify_fail">user name or password is not correct !</string>
    <string name="str_login_network_break">link fail, please check the network connection!</string>

    <string name="str_routedatabase_view">Route Database</string>
    <string name="str_device_view">Devices</string>
    <string name="str_rankinglist_view">Ranking List</string>

</resources>
