<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:transitionGroup="false" android:background="@color/white">

    <TextView
    android:layout_width="fill_parent"
    android:layout_height="@dimen/title_height"
    android:background="@color/black"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:gravity="center"
    android:textSize="@dimen/title_text_size"/>

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/title_height"
        android:stretchColumns="*"
        android:padding="3dip">

        <TableRow>
            <TextView
                android:text="@string/str_login_user"
                android:layout_width="1dip"
                android:id="@+id/login_textview_password"
                android:layout_alignParentRight="true"
                android:textColor="#000"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|right"
                android:textSize="@dimen/content_text_size"/>
            <EditText
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:id="@+id/login_edittext_user"
                android:inputType="textPersonName"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="50dp"
                android:textSize="@dimen/content_text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/str_login_password"
                android:layout_width="1dip"
                android:layout_alignParentRight="true"
                android:layout_marginRight="3dp"
                android:textColor="#000"
                android:gravity="center_vertical|right"
                android:textSize="@dimen/content_text_size"/>
            <EditText
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="@dimen/content_text_size"
                android:text="name"
                android:id="@+id/login_edittext_password"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="50dp"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:text="@string/str_login_register"
                android:id="@+id/login_btn_register"
                android:textSize="@dimen/content_text_size"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="3dp"/>

            <Button
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:text="@string/str_login_login"
                android:id="@+id/login_btn_login"
                android:textSize="@dimen/content_text_size"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="50dp"/>
        </TableRow>
    </TableLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/content_text_size"
        android:id="@+id/login_textview_loginstate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:visibility="gone"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressBar_login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:visibility="gone" />
</RelativeLayout>